--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al amin sardar</title>
-    
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>my love my mom</h1>
+    <h2>my fother so cute</h2>
+    <p>Amar gram dokholpara</p>
+    <h3>My sister so cute</h3>
+
 </body>
 </html>
