--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
     <p>Amar gram dokholpara</p>
     <h3>My sister so cute</h3>
      <p>Khela hobe insallah samne eid a</p>
+
+<img src="Ariyan .jpg" alt=" Ariyan">
+<img src="net.jpg" alt="" srcset="Don't">
+
 </body>
 </html>
